[gd_scene load_steps=4 format=3 uid="uid://c8v4hk8y35a6u"]

[ext_resource type="Texture2D" uid="uid://crovglpkjvq4f" path="res://assets/ui/border.png" id="1_pfjet"]
[ext_resource type="Script" path="res://game/objects/terrain/construction_spot/construction_spot_ui.gd" id="1_rhdsr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_plf7s"]

[node name="ConstructionSpotUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 200.0
script = ExtResource("1_rhdsr")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pfjet")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_plf7s")
tabs_visible = false

[node name="Construct" type="VBoxContainer" parent="MarginContainer/TabContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Construct"]
layout_mode = 2
text = "Construction Site"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/TabContainer/Construct"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/TabContainer/Construct"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/TabContainer/Construct/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="BuyTurbineLow" type="Button" parent="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Buy"

[node name="TurbineLowLabel" type="Label" parent="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Turbine Low"
horizontal_alignment = 1

[node name="TurbineLowPrice" type="Label" parent="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer"]
layout_mode = 2
text = "₡40"
horizontal_alignment = 2

[node name="BuyTurbineHigh" type="Button" parent="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Buy"

[node name="TurbineHighLabel" type="Label" parent="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Turbine High"
horizontal_alignment = 1

[node name="TurbineHighPrice" type="Label" parent="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer"]
layout_mode = 2
text = "₡100"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/TabContainer/Construct"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/Construct"]
layout_mode = 2
alignment = 1

[node name="Close" type="Button" parent="MarginContainer/TabContainer/Construct/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/TabContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmMessage" type="Label" parent="MarginContainer/TabContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Confirm construction
of XXX"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/TabContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TabContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Yes" type="Button" parent="MarginContainer/TabContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Yes"

[node name="No" type="Button" parent="MarginContainer/TabContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "No"

[connection signal="pressed" from="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer/BuyTurbineLow" to="." method="_on_buy_turbine_low_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Construct/ScrollContainer/GridContainer/BuyTurbineHigh" to="." method="_on_buy_turbine_high_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/Construct/HBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="MarginContainer/TabContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_no_pressed"]
